--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Put GitHub repositories I starred into Tumblr.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "repository": {
     "type": "git",
